--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -15,7 +15,7 @@
     <link href="{{ ASSET_PATH }}/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="{{ ASSET_PATH }}/css/style.css?body=1" rel="stylesheet" type="text/css" media="all">
 
-	<link href="http://crazymaster.github.com/atom.xml" rel="alternate" title="master'blog" type="application/atom+xml" />
+	<link href="/atom.xml" rel="alternate" title="master'blog" type="application/atom+xml" />
 
     <!-- Le fav and touch icons -->
   <!-- Update these with your own images
