--- a/_includes/themes/hooligan/default.html
+++ b/_includes/themes/hooligan/default.html
@@ -62,17 +62,17 @@
               <li class="divider-vertical"></li>
               {% if site.author.github %}
                 <li>
-                  <a href="https://www.github.com/{{ site.author.github }}" class="zocial github icon" target="_blank"></a>
+                  <a href="https://github.com/{{ site.author.github }}" class="zocial github icon" target="_blank"></a>
                 </li>
               {% endif %}
               {% if site.author.googleplus %}
                 <li>
-                  <a href="https://profiles.google.com/{{ site.author.google }}" class="zocial googleplus icon" target="_blank"></a>
+                  <a href="https://plus.google.com/{{ site.author.googleplus }}" class="zocial googleplus icon" target="_blank"></a>
                 </li>
               {% endif %}    
               {% if site.author.twitter %}
                 <li>
-                  <a href="http://www.twitter.com/{{ site.author.twitter }}" class="zocial twitter icon" target="_blank"></a>
+                  <a href="https://twitter.com/{{ site.author.twitter }}" class="zocial twitter icon" target="_blank"></a>
                 </li>
               {% endif %}                          
               {% if site.author.facebook %}
