--- a/_includes/themes/hooligan/default.html
+++ b/_includes/themes/hooligan/default.html
@@ -11,6 +11,7 @@
     {% if page.description %}<meta name="description" content="{{ page.description }}">{% endif %}
     <meta name="author" content="{{ site.author.name }}">
 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -18,7 +19,7 @@
 
     <link href="{{ ASSET_PATH }}/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="{{ ASSET_PATH }}/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">    
-    <link rel="stylesheet" type="text/css" href="{{ ASSET_PATH }}/css-social-buttons/css/zocial.stripped.css" />
+    <link rel="stylesheet" type="text/css" href="{{ ASSET_PATH }}/css-social-buttons/css/zocial.stripped.css">
     <link href="{{ ASSET_PATH }}/css/pygments.css" rel="stylesheet" type="text/css" media="all">
     <link href="{{ ASSET_PATH }}/css/darkstrap.css" rel="stylesheet" type="text/css" media="all">    
     <link href="{{ ASSET_PATH }}/css/style.css?body=1" rel="stylesheet" type="text/css" media="all">
@@ -30,6 +31,8 @@
     <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
     <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
   -->
+
+    <link href="{{ BASE_PATH }}{{ site.JB.atom_path }}" type="application/atom+xml" rel="alternate" title="{{ page.title }}">
 
     {% include JB/analytics %}
   </head>
@@ -55,33 +58,48 @@
               {% assign group = 'navigation' %}
               {% include JB/pages_list %}
             </ul>
-            <ul class="nav pull-right social">
+            <ul class="nav pull-right social visible-desktop">
               <li class="divider-vertical"></li>
+              <li>
+                <a href="{{ BASE_PATH }}{{ site.JB.atom_path }}" class="zocial rss icon" target="_blank">
+                  <span class="hidden-desktop">Feed</span>
+                </a>
+              </li>
               {% if site.author.github %}
-                <li>
-                  <a href="https://github.com/{{ site.author.github }}" class="zocial github icon" target="_blank"></a>
-                </li>
+              <li>
+                <a href="https://github.com/{{ site.author.github }}" class="zocial github icon" target="_blank">
+                  <span class="hidden-desktop">Github</span>
+                </a>
+              </li>
               {% endif %}
               {% if site.author.googleplus %}
-                <li>
-                  <a href="https://plus.google.com/{{ site.author.googleplus }}" class="zocial googleplus icon" target="_blank"></a>
-                </li>
-              {% endif %}    
+              <li>
+                <a href="https://plus.google.com/{{ site.author.googleplus }}" class="zocial googleplus icon" target="_blank">
+                  <span class="hidden-desktop">Google+</span>
+                </a>
+              </li>
+              {% endif %}
               {% if site.author.twitter %}
-                <li>
-                  <a href="https://twitter.com/{{ site.author.twitter }}" class="zocial twitter icon" target="_blank"></a>
-                </li>
-              {% endif %}                          
+              <li>
+                <a href="https://twitter.com/{{ site.author.twitter }}" class="zocial twitter icon" target="_blank">
+                  <span class="hidden-desktop">Twitter</span>
+                </a>
+              </li>
+              {% endif %}
               {% if site.author.facebook %}
-                <li>
-                  <a href="http://www.facebook.com/{{ site.author.facebook }}" class="zocial facebook icon" target="_blank"></a>
-                </li>
-              {% endif %}           
+              <li>
+                <a href="http://www.facebook.com/{{ site.author.facebook }}" class="zocial facebook icon" target="_blank">
+                  <span class="hidden-desktop">Facebook</span>
+                </a>
+              </li>
+              {% endif %}
               {% if site.author.linkedin %}
-                <li>
-                  <a href="http://www.linkedin.com/in/{{ site.author.linkedin }}" class="zocial linkedin icon" target="_blank"></a>
-                </li>
-              {% endif %}                    
+              <li>
+                <a href="http://www.linkedin.com/in/{{ site.author.linkedin }}" class="zocial linkedin icon" target="_blank">
+                  <span class="hidden-desktop">LinkedIn</span>
+                </a>
+              </li>
+              {% endif %}
             </ul>
           </div>
         </div>
